# notes

./: .gitignore  Makefile  README.md  notes.py  pyproject.toml  quicknotes.py
data/: notes.conf  notesdb.sql
doc/: documentation.md
icons/: README.md
pylibnotes/: database.py  editor.py
src/: notes_cffi.cpp  notes_core.cpp  notes_core.h  quicknotes_cffi.cpp  quicknotes_core.cpp  quicknotes_core.h
src/notes/: note.py  notes.py
src/notes/data/: notes.conf  notes.db
src/notes/libnotes/: editor.py
