[project]
name = "notes"
version = "0.0.1"
description = "A minimalist, easy to use, terminal based app to manage your notes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iniconfig>=2.1.0",
    "prompt-toolkit>=3.0.51",
    "pytest>=8.3.5",
    "rich>=14.0.0",
]

[project.scripts]
notes = "notes.notes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notes"]
package-data = { "notes" = ["data/*"] }
